fine sezione 2 mobile

--- a/index.html
+++ b/index.html
@@ -92,7 +92,21 @@
 
     </div>
 
+    <!-- SEZIONE DUE -->
+    <div class="section2">
 
+        <div class="section2-text">
+            <h3>
+                “ah ho capito, tu sei quello che si è laureato in Scienze della Comunicazione.. 
+                Beato te che hai fatto finta di studiare”
+            </h3>
+        </div>
+
+        <div class="section2-image">
+            <img src="img/sec2-img.svg" alt="">
+        </div>
+
+    </div>
 
     <script src="app.js"></script>
 </body>
