--- a/index.html
+++ b/index.html
@@ -108,6 +108,44 @@
 
     </div>
 
+
+    <!-- SEZOIONE 3 CARD -->
+    <div class="section3">
+
+        <div class="section3-text">
+            <h3>
+                guarda, in realtà è un po’ più complesso 
+                se ti va ti invito a vedere cosa ho fatto, 
+                almeno ti fai un’idea.
+            </h3>
+        </div>
+
+        <div class="section3-container">
+
+            <div class="card">
+
+                <div class="card-image study"></div>
+
+                <p>i miei studi</p>
+
+                <a href="#">leggi di pi&uacute;</a>
+
+            </div>
+
+            <div class="card">
+
+                <div class="card-image work"></div>
+
+                <p>i miei lavori</p>
+
+                <a href="#">e clicca almeno qui</a>
+
+            </div>
+
+        </div>
+
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
