--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
 
-    <!-- SEZOIONE 3 CARD -->
+    <!-- SEZIONE 3 CARD -->
     <div class="section3">
 
         <div class="section3-text">
@@ -145,6 +145,8 @@
         </div>
 
     </div>
+
+    <!-- FOOTER -->
 
     <script src="app.js"></script>
 </body>
