--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -64,7 +64,7 @@
     <div class="hero">
 
         <div class="hero-image">
-            <img src="img/alessio-cracchiolo-hero-avatar.png" alt="">
+            <img src="img/home/alessio-cracchiolo-hero-avatar.png" alt="">
         </div>
         
         <div class="hero-text animate__animated animate__backInRight "> 
@@ -87,7 +87,7 @@
     <div class="intro">
 
         <div class="intro-image">
-            <img src="img/intro-image.svg" alt="">
+            <img src="img/home/intro-image.svg" alt="">
         </div>
 
         <div class="intro-text">
@@ -111,7 +111,7 @@
         </div>
 
         <div class="section2-image">
-            <img src="img/sec2-img.svg" alt="">
+            <img src="img/home/sec2-img.svg" alt="">
         </div>
 
     </div>
@@ -191,6 +191,6 @@
         <i class="fa-solid fa-arrow-turn-up"></i>
     </div>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
