modifiche a home su link

--- a/index.html
+++ b/index.html
@@ -129,16 +129,17 @@
         </div>
 
         <div class="section3-container">
-
+            
             <div class="card">
 
                 <div class="card-image study"></div>
 
                 <p>i miei studi</p>
 
-                <a href="#">leggi di pi&uacute;</a>
+                <a href="about.html">leggi di pi&uacute;</a>
 
             </div>
+
 
             <div class="card">
 
