start da non mi ricordo quando

--- a/about.html
+++ b/about.html
@@ -97,6 +97,52 @@
         </div>
     </div>
 
+    <!-- SEZIONE 2 -->
+    <div class="studi">
+
+        <div class="studi-container">
+
+            <div class="card universita">
+
+                <h3>
+                    Scienze della Comunicazione
+                </h3>
+                <h4>
+                    Università degli Studi di Torino
+                </h4>
+                <p>
+                    Ho deciso di intraprendere questo percorso di studi spinto dall’intereresse della comunicazione, ovviamente. Nel 2016, dopo una esperienza come programmatore, mi sono reso conto che mi mancava qualcosa. La passione per le parole, le tecniche per attirare l’attenzione mi sono sempre affascinate. Ho scoperto quindi che questi due mondi, l’informatica e la comunicazione potessero coesistere. 
+                </p>
+
+            </div>
+
+            <div class="card liceo">
+
+                <h3>
+                    Perito Informatico
+                </h3>
+
+                <h4>
+                    IIS Europa Unita - Chivasso
+                </h4>
+
+                <p>
+                    Sin da bambino avevo la passione per l’informatica, mi piacevano i computer, montarli e smontarli. Ho intrapreso questo percorso con l’idea che potessi sviluppare videogiochi, poi mi sono reso conto che non era come me l’aspettavo. 
+
+                    Grazie alle scuole superiori sono riuscito ad apprendere le basi per la programmazione web.
+                </p>
+
+            </div>
+
+            <div class="card corsi">
+                
+            </div>
+            
+        </div>
+
+    </div>
+
+
 
 
 
